--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,15 +1,3 @@
-# auto pre-commit version 1.0.1
-
-[![Netlify Status](https://api.netlify.com/api/v1/badges/416b8ca3-82db-470f-9adf-a6d06264ca75/deploy-status)](https://app.netlify.com/sites/mystifying-keller-ab5658/deploys)
-
-04-30-2019 | 04:04:01
-
----
-
-## pre-commit deployment automation for macOS
-
-```bash
-
 
 ###############################################################################
 # auto pre-commit : pre-commit deployment automation for macOS (version 1.0.1)
@@ -51,25 +39,52 @@
 ###############################################################################
 
 
-```
-
-
----
-
-```bash
-
-.
-├── Pipfile
-├── Pipfile.lock
-├── README.md
-├── bak
-│   └── README.bak.md
-├── codecov.yml
-├── dc_usage.sh
-├── requirements.txt
-├── test.php
-├── test.py
-└── test.txt
-
-1 directory, 10 files
-```
+# Pre-commit Sample yaml template
+default_language_version:
+    python: python3.7
+default_stages: [commit, push]
+exclude: "^$"
+fail_fast: false
+# @see http://pre-commit.com/
+repos:
+    - repo: git://github.com/pre-commit/pre-commit-hooks
+      rev: 6d7906e131976a1ce14ab583badb734727c5da3e
+      hooks:
+          - id: check-yaml
+            files: \.(yaml|yml)$
+          - id: check-added-large-files
+          - id: check-byte-order-marker
+          - id: check-docstring-first
+          - id: check-case-conflict
+          - id: check-json
+          - id: check-merge-conflict
+          - id: check-symlinks
+          #   -   id: detect-aws-credentials
+          - id: detect-private-key
+          - id: end-of-file-fixer
+          - id: flake8
+            args: [--max-line-length=79]
+          - id: pretty-format-json
+          - id: requirements-txt-fixer
+          - id: trailing-whitespace
+    # Python settings ... replace as needed
+    - repo: git://github.com/pre-commit/mirrors-pylint
+      rev: v2.3.1
+      hooks:
+          - id: pylint
+# PHP settings ... replace as needed
+# - repo: git@github.com:hootsuite/pre-commit-php.git
+#   sha: 1.1.0
+#   hooks:
+#   - id: php-lint-all
+#   - id: php-unit
+#   - id: php-cs
+#     files: \.(php)$
+#     args: [--standard=PSR1 -p]
+#   - id: php-cbf
+#     files: \.(php)$
+#     args: [--standard=PSR1 -p]
+# The tool will fail a build when it has made changes to the staged files. This allows a developer to do a git diff and examine the changes that it has made. Remember that you may omit this if needed with a SKIP=php-cs-fixer git commit.
+#   - id: php-cs-fixer
+#     files: \.(php)$
+#     args: [--level=PSR2]
